# solyd-backend

./: CLAUDE.md  LICENSE  PLUME.md  README.md  docker-compose-prod.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  reset-prod.sh  reset.sh  run.sh
app/: config.py  main.py
app/api/: chat.py  conflict.py  graph.py  ingest.py  progressive.py  search.py  visualization.py
app/db/: database.py  init_schema.py  models.py  neo4j.py  postgres.py
app/models/: nodes.py  relationships.py  schemas.py  search_schemas.py
app/services/: bioportal.py  chunking.py  cypher_generator.py  document_processor.py  embedding.py  entity_matcher.py  extraction.py  graph_writer.py  id_generator.py  ingestion.py  normalization.py  ocr.py  ontology.py  query.py  resolution.py  s3.py  session.py  validation.py
rox-slide/: .gitignore  README.md  package.json  presentation.html  presentation.md
tests/: conftest.py
tests/test_api/: test_chat_api.py  test_graph_api.py  test_ingest_api.py
tests/test_models/: test_nodes.py
tests/test_services/: test_embedding.py  test_extraction.py  test_ingestion.py  test_query.py  test_resolution.py  test_s3.py
